# TexasTerminal

./: .gitignore  CMakeLists.txt  nctest.cpp  test.cpp
include/: card.h
src/: card.cpp
